2008-04-06  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/35400
	* tree-vrp.c (vrp_evaluate_conditional): Only query value-range
	information from SSA_NAMEs.

	* gcc.dg/torture/pr35400.c: New testcase.
	* g++.dg/torture/pr35400.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@133967 138bc75d-0d04-0410-961f-82ee72b054a4